--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pop-up Hai Wendi</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cyberpunk Pop-up</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Overlay -->
+  <div class="container">
+    <button id="showPopupBtn" class="cyberpunk-btn">Tampilkan Pesan</button>
+  </div>
+
   <div id="popup" class="popup-overlay hidden">
     <div class="popup-content">
       <p>Hai Wendi 🪨</p>
-      <button id="closeBtn">Tutup</button>
+      <button id="closeBtn" class="cyberpunk-btn small">Tutup</button>
     </div>
   </div>
 
