--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div id="popup" class="popup-overlay hidden">
     <div class="popup-content">
-      <p>Hai Wendi 🪨</p>
+      <p>Hai Wendi 🗿</p>
       <button id="closeBtn" class="cyberpunk-btn small">Tutup</button>
     </div>
   </div>
